https://github.com/swagger-api/swagger-ui/releases
